client/src/App.css
*{
  margin: 0;
  padding: 0;
}
body,
header,
.layout {
  text-align: center;
  margin: 0;
  padding: 0;
}
.realApp {
  width: 100vw;
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  font-family:'Times New Roman', Times, serif;
  /* overflow: auto; */
  /* overflow-y: none; */
}

body{
  height: 100vh;
  width:100vw;
  background-image: url(https://source.unsplash.com/random/3840x2160/?day-time-landscape-wallpaper);
  background-size:100% 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed
}
.container {
  padding: 0;
  height: 85vh;
  width: 100vw;
  display: flex;
  justify-content: space-around;
}

input,textarea{
color:rgb(23 43 78); 
font-family:'Times New Roman', Times, serif;
}




















/*Header*/
header{
  width:100vw;
  min-width: 100%;
  height: 60px;
  background-color: rgba(28, 52, 77, 0.99);


  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;

  margin-bottom: 10px;
}

header>img{
  height: 60px;
  filter:drop-shadow(0px 0px 7px  rgb(0, 0, 0));
}
.title {
  font-size: large;
  color: whitesmoke;
   filter:drop-shadow(1px 1px 8px  rgb(0, 0, 0));
}

.logOut{
  color: whitesmoke;
  font-size: large;
  filter:drop-shadow(1px 1px 8px  rgb(0, 0, 0));
  cursor:pointer;
}


button{
  cursor: pointer;
}



.pseudo{
  visibility: hidden;
}


























/*Lists*/
.realApp{
  display: flex;
  flex-direction: column;
}
.section {
  display: flex;
  flex-direction: column;

  height: fit-content;
  max-height: 80vh;
  width: 30vw;
  min-width: 350px;
  padding: 10px;
  border-radius: 15px;
  border: 1px solid rgb(234,234,234);
  background-color:  rgba(234, 234, 234, 0.5) ;
  backdrop-filter: blur(3px);
  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
}


.list {
  overflow: auto;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.listTitle{
  width:100%;
  display: flex;
  justify-content: space-around;
  color:rgb(23 43 78);  
}

.section>.listTitle{
filter:drop-shadow(1px 1px 18px  rgb(255, 255, 255));
}

.titleBtn{
  background-color: transparent;
  border: none;
  font-size: x-large;
  font-weight:500;
  color: rgb(23 43 78);
  filter:drop-shadow(1px 1px 9.5px  rgb(255, 255, 255))
}
.titleBtn:hover{
color:white;
}







/*Tasks*/
.task {
  margin: 10px 0px ;
  padding: 10px 0px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 8vh;
  min-height: 55px;
  width: 95%;
  min-width: 340px;
  border-radius: 15px;
  background-color: rgba(239, 238, 255, 0.8) ;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.task:hover{
  background-color: rgba(206, 205, 220, 0.9) ;
}

.task>a{
  text-decoration: none;
  color:rgb(23 43 78); 
  font-weight:bold;
  font-size: medium;
}

.moveBtn{
 width:100%;
 display: flex;
 justify-content: space-around;
}
button{
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  min-width: fit-content;
  border:none;
  border-radius: 10px;

}
.moveBtn>button, .singleBtn{
  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  padding:7.5px;  
  background-color: rgb(234, 234, 234);
  color:rgb(23 43 78);
  font-weight:bold;
}


.moveBtn>button:hover, .singleBtn:hover{
  background-color: rgb(221, 218, 218);
}

/* .singleBtn{
  padding: 3px;
  border:none;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  background-color: rgba(255, 255, 255, 0.5);
  color:rgb(23 43 78);
  font-weight: 400;
} */
/* {
  background-color: rgb(221, 218, 218);
} */


















/*Show*/
.overlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
}
.trashOverlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  /* z-index: 800; *//*Working without z-indes*/
}
.editOverlay{
 position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0);
  z-index: 3000;
}
.showOverlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 100;
}

.close{
  align-self: flex-end;
  border:none;
  font-size: x-large;
  background-color: rgba(255, 255, 255, 0);
  color:rgb(62, 72, 90); 
}
.close:hover{
 color:rgb(4, 24, 75); 
}

.modalContainer {
  height: 50vh;
  min-height: fit-content;
  width: 40vw;
  overflow-y: auto;
  overflow-x: hidden;
  /* margin: 20px 0px; */
  padding: 10px 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  border-radius: 15px;
  background-color: rgba(235, 236, 240, 0.9);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;

  position: fixed;
  top:50%;
  left: 50%;
  transform: translate(-50%,-50%);

  /* z-index: 1000000001; */
}
.editModal{
  background-color: rgba(0, 0, 0, 0);
}

.showHeader{
  width: 100%;
  display: flex;
  flex-direction: column;
  /* align-self: flex-start; */
}
.showHeader>.listTitle{
  margin: 2.5vh 0;
}

.taskStatus{
  text-decoration: underline;
}

.showInfo{
  margin-top: -5vh;
  width:100%;
  justify-self:flex-end;
  align-self: center;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.showInfo>h3{
  color:rgb(23 43 78);
  align-self: flex-start;  
}

.secondaryInfo{
  font-size: larger;
  color:rgb(29, 35, 45); 
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  margin-bottom: 15px;
}

.instructions{
  padding: 2.5px 10px ;
  border-radius: 5px;
  background-color: whitesmoke;
  min-width:99%;
  margin-bottom: 2.5vh;
  min-height:50px ;
}
.instructions>p{
    text-align: left;
  align-self: flex-start;
  font-size: large;
  line-height: 20px;
}
.emptyInstructions{
  padding: 2.5px 10px ;
  border-radius: 5px;
  background-color: whitesmoke;
  min-width:99%;
  min-height:50px ;
  margin-bottom: 2.5vh;
}

ol{
  text-align: left;
  align-self: flex-start;
  list-style-position: inside
}
ol>li{
  font-size: large;
  line-height: 20px;
}


.trashModalContainer{
  height: 50vh;
  width: 40vw;
  overflow-y: auto;
  margin: 20px, 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* justify-content: center; */
  padding: 5px;
  border-radius: 5px;
  background-color: rgba(235, 236, 240, 0.9);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;

  position: fixed;
  top:50%;
  left: 50%;
  transform: translate(-50%,-50%);

  /* z-index: 100000000; */
}
.form {
  margin:0;
  padding:0;
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: column;
  /* justify-content: space-between; */
  align-items: center;
}
.form>textarea{
  height: fit-content;
  min-height:50px ;
  width:99%;


  border: none;
  resize:none;

   border-radius: 5px;
   -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
  border-radius: 5px;

  font-family:'Times New Roman', Times, serif;
  font-size: large;
  line-height: 20px;

  padding: 2.5px 10px ;
  margin-bottom: 2.5vh;
}

.form>input{
    color:rgb(23 43 78); 
    font-size: 2em;
    font-family:'Times New Roman', Times, serif;

    margin-block-start: 0.67em;
    margin-block-end: 0.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;

    text-align: center;
  /* padding:10px; */
  /* font-size: larger; */
  width:100%;
  border: none;
  border-radius: 5px;
}































/*TrashBin*/
.trashBin{
  border: none;
  background-color: rgba(0, 0, 0, 0);
  font-size: xx-large;
  color: whitesmoke;
  border-radius: 250%;
  align-self: flex-end;
  margin-right: 30px;
  padding: 0;
  cursor: pointer;
}

.fa-trash-can{
  filter:drop-shadow(1px 1px 10px  rgb(0, 0, 0))
}


/* .fa-trash-can{text-shadow:1px 6px rgba(0, 0, 0, 0.5)}

.fa-trash-can{box-shadow:0 .5rem 1rem 0 rgba(0, 0, 0, 0.5),0 .375rem 1.25rem 0 rgba(0, 0, 0, 0.19)} */



/* .showPage {
  width: 50vw;
  height: 50vh;
  position: absolute;
  top:50%;
  left:50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: burlywood;
  /* z-index: 1000; 
} */

/* .taskContainer {
  width: 70vw;
  height: 60vh;
  border: 1px solid black;
  background-color: azure;
  display: flex;
  justify-self: center;
  align-items: center;
  flex-direction: column;
} */










/*Auth Page*/
.authForm-container{
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;

}

.authForm{
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(7px);
  -webkit-backdrop-filter: blur(7px);
  border-radius: 15px;
  border: 1px solid whitesmoke;
  color:whitesmoke;
  font-size: larger;
  padding: 2.5% 2.5%;

  height: 30vh;
  min-height: 380px;
  width: 35vh;
  min-width: 268px;


  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.signUpForm{
  height: 45vh;
  min-height: 500px;
}

.authForm>input{
  font-size: larger;
  color: rgb(255, 255, 255);
  /* filter:drop-shadow(10px 1px 20px  rgb(0, 0, 0)); */
  width:90%;
  border: none;
  border-bottom: 2px solid rgb(202, 200, 200);
  border-radius: 0%;
  background-color: transparent;
  transition: 0.5s;
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
  outline:none;
  margin-bottom: 25px;
}
.authForm>input:focus{
  border: none;
  border-bottom: 2px solid white;
}

.authForm>label{
  font-size: larger;
  filter:drop-shadow(1px 1px 10px  rgb(0, 0, 0));
  align-self: flex-start;
}
.authForm>p,.authForm>h1{
  filter:drop-shadow(1px 1px 10px  rgb(0, 0, 0));
}

.authBtn{
  border: none;
  border-radius: 15px;
  background-color:rgb(234, 234, 234);
  color:rgb(3, 29, 74); 
  font-size: large;
  font-weight:600;
  width: 80%;
  height: 15%;
  min-height: 10%;
}
.authBtn:hover{
  background-color:white;
}

.formChange{
  font-weight: bold;
  cursor:pointer;
}
.formChange:hover{
  transition: 0.5s;
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
  color:rgb(3, 29, 74); 
   
}

.error-message{
  color:rgb(155, 1, 1)
}







@media only screen and (max-width: 420px){
  /* #root{
    position: relative;
    width: 100vw;
    height:100vh;
  }
  body{
    position: relative;
    width: 100vw;
    height: 100vh;
  } */

/*Auth Page*/
  .AuthApp, .App{
    height: 100vh;
    width: 100vw;
  }
  

  .section{
    width: 95vw;
  }

  .authForm-container{
    height: 100vh;
    width:100vw
  }





  /*Main App Page*/


  .realApp{
    /* position: relative; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    width:100vw;
    height:100vh;
    /*  overflow-x: scroll;  */
  }

    .container{
    width:100%;
    min-height:80vh;
    justify-content: flex-start;
    overflow-x: scroll;
    overflow-y: hidden;
    scroll-snap-type: x mandatory;
  }
  .section{
    min-width: 92vw;
    height: 80vh;
    scroll-snap-align: center;
    margin:0 10px
  }
.trashBin{
  /* display: none; */
}

}

